update CORS, new api: /parameter, rename old api to api-s
