# controllers/project_controller_parameter.go
@@ -1,0 +1,86 @@
+package controllers
+
+import (
+	"net/http"
+	"parameter-store-be/models"
+
+	"github.com/gin-gonic/gin"
+)
+
+// GetProjectParameters godoc
+// @Summary Get project parameters
+// @Description Get project parameters
+// @Tags Project Detail / Parameters
+// @Accept json
+// @Produce json
+// @Param project_id path string true "Project ID"
+// @Success 200 {array} models.Parameter
+// @Failure 400 string {string} json "{"error": "Bad request"}"
+// @Failure 500 string {string} json "{"error": "Failed to get project parameters"}"
+// @Router /api/v1/project/{project_id}/parameters [get]
+func GetProjectParameters(c *gin.Context) {
+	projectID, exist := c.Get("project_id")
+	if !exist {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to get project ID from user"})
+		return
+	}
+
+	var parameters []models.Parameter
+	DB.Where("project_id = ?", projectID).Find(&parameters)
+	c.JSON(http.StatusOK, gin.H{"parameters": parameters})
+}
+
+// CreateParameter godoc
+// @Summary Create new parameter
+// @Description Create new parameter
+// @Tags Project Detail / Parameters
+// @Accept json
+// @Produce json
+// @Param Parameter body controllers.CreateParameter.createParameterRequestBody true "Parameter"
+// @Param project_id path string true "Project ID"
+// @Success 200 string {string} json "{"message": "Parameter created"}"
+// @Failure 400 string {string} json "{"error": "Bad request"}"
+// @Failure 500 string {string} json "{"error": "Failed to create parameter"}"
+// @Router /api/v1/project/{project_id}/parameters [post]
+func CreateParameter(c *gin.Context) {
+	projectID, exist := c.Get("project_id")
+	if !exist {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to get project ID from user"})
+		return
+	}
+
+	type createParameterRequestBody struct {
+		Name  string `json:"name" binding:"required"`
+		Value string `json:"value" binding:"required"`
+	}
+	newParameterBody := createParameterRequestBody{}
+	if err := c.ShouldBindJSON(&newParameterBody); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	// get latest version of project
+	var project models.Project
+	if err := DB.First(&project, projectID).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to get project"})
+		return
+	}
+	latestVersion := project.Versions[len(project.Versions)-1]
+
+	newParameter := models.Parameter{
+		Name:  newParameterBody.Name,
+		Value: newParameterBody.Value,
+	}
+
+	// Append the new parameter to the latest version's Parameters slice
+	latestVersion.Parameters = append(latestVersion.Parameters, newParameter)
+	// Save the new parameter to the database
+	if err := DB.Create(&newParameter).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create parameter"})
+		return
+	} else if err := DB.Save(&latestVersion).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to update latest version"})
+		return
+	}
+
+	c.JSON(http.StatusCreated, gin.H{"message": "Parameter created successfully"})
+}
