# controllers/project_controller_parameter_stage.go
@@ -10,14 +10,14 @@ import (
 // Create new stage
 // @Summary Create new stage
 // @Description Create new stage
-// @Tags Project Detail / Stage
+// @Tags Project Detail / Parameters / Stages
 // @Accept json
 // @Produce json
 // @Param Stage body controllers.CreateStage.createStageRequestBody true "Stage"
 // @Success 201 string {string} json "{"message": "Stage created successfully", "stage": "stage"}"
 // @Failure 400 string {string} json "{"error": "Bad request"}"
 // @Failure 500 string {string} json "{"error": "Failed to create stage"}"
-// @Router /api/v1/project/{project_id}/stage [post]
+// @Router /api/v1/project/{project_id}/stages [post]
 func CreateStage(c *gin.Context) {
 	type createStageRequestBody struct {
 		Name string `json:"name" binding:"required"`
@@ -48,14 +48,14 @@ func CreateStage(c *gin.Context) {
 // Get all stages
 // @Summary Get all stages
 // @Description Get all stages
-// @Tags Project Detail / Stage
+// @Tags Project Detail / Parameters / Stages
 // @Accept json
 // @Produce json
 // @Param project_id path string true "Project ID"
 // @Success 200 string {string} json "{"stages": "stages"}"
 // @Failure 400 string {string} json "{"error": "Bad request"}"
 // @Failure 500 string {string} json "{"error": "Failed to list stages"}"
-// @Router /api/v1/project/{project_id}/stage [get]
+// @Router /api/v1/project/{project_id}/stages [get]
 func GetStages(c *gin.Context) {
 	projectID, exist := c.Get("project_id")
 	if !exist {
@@ -74,7 +74,7 @@ func GetStages(c *gin.Context) {
 // Update stage
 // @Summary Update stage
 // @Description Update stage
-// @Tags Project Detail / Stage
+// @Tags Project Detail / Parameters / Stages
 // @Accept json
 // @Produce json
 // @Param project_id path string true "Project ID"
@@ -83,7 +83,7 @@ func GetStages(c *gin.Context) {
 // @Success 200 string {string} json "{"message": "Stage updated successfully", "stage": "stage"}"
 // @Failure 400 string {string} json "{"error": "Bad request"}"
 // @Failure 500 string {string} json "{"error": "Failed to update stage"}"
-// @Router /api/v1/project/{project_id}/stage/{stage_id} [put]
+// @Router /api/v1/project/{project_id}/stages/{stage_id} [put]
 func UpdateStage(c *gin.Context) {
 	type updateStageRequestBody struct {
 		Name string `json:"name" binding:"required"`
@@ -122,7 +122,7 @@ func UpdateStage(c *gin.Context) {
 // Delete stage
 // @Summary Delete stage
 // @Description Delete stage
-// @Tags Project Detail / Stage
+// @Tags Project Detail / Parameters / Stages
 // @Accept json
 // @Produce json
 // @Param project_id path string true "Project ID"
@@ -130,7 +130,7 @@ func UpdateStage(c *gin.Context) {
 // @Success 200 string {string} json "{"message": "Stage deleted successfully"}"
 // @Failure 400 string {string} json "{"error": "Bad request"}"
 // @Failure 500 string {string} json "{"error": "Failed to delete stage"}"
-// @Router /api/v1/project/{project_id}/stage/{stage_id} [delete]
+// @Router /api/v1/project/{project_id}/stages/{stage_id} [delete]
 func DeleteStage(c *gin.Context) {
 	projectID, exist := c.Get("project_id")
 	if !exist {
