# docs/swagger.yaml
@@ -6,6 +6,16 @@ definitions:
     required:
     - name
     type: object
+  controllers.CreateParameter.createParameterRequestBody:
+    properties:
+      name:
+        type: string
+      value:
+        type: string
+    required:
+    - name
+    - value
+    type: object
   controllers.CreateStage.createStageRequestBody:
     properties:
       name:
@@ -151,6 +161,31 @@ definitions:
       updatedAt:
         type: string
     type: object
+  models.Parameter:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      description:
+        type: string
+      environment:
+        $ref: '#/definitions/models.Environment'
+      environmentID:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+      stage:
+        $ref: '#/definitions/models.Stage'
+      stageID:
+        type: integer
+      updatedAt:
+        type: string
+      value:
+        type: string
+    type: object
   models.Stage:
     properties:
       createdAt:
@@ -161,6 +196,27 @@ definitions:
         type: integer
       name:
         type: string
+      projectID:
+        type: integer
+      updatedAt:
+        type: string
+    type: object
+  models.Version:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      description:
+        type: string
+      id:
+        type: integer
+      number:
+        type: string
+      parameters:
+        items:
+          $ref: '#/definitions/models.Parameter'
+        type: array
       projectID:
         type: integer
       updatedAt:
@@ -414,7 +470,7 @@ paths:
       summary: Delete project
       tags:
       - Organization
-  /api/v1/project/{project_id}/agent:
+  /api/v1/project/{project_id}/agents:
     get:
       consumes:
       - application/json
@@ -479,7 +535,7 @@ paths:
       summary: Create new agent
       tags:
       - Project Detail / Agent
-  /api/v1/project/{project_id}/environment:
+  /api/v1/project/{project_id}/environments:
     get:
       consumes:
       - application/json
@@ -507,7 +563,7 @@ paths:
             type: string
       summary: Get all environments
       tags:
-      - Project Detail / Environment
+      - Project Detail / Parameters / Environments
     post:
       consumes:
       - application/json
@@ -541,8 +597,8 @@ paths:
             type: string
       summary: Create new environment
       tags:
-      - Project Detail / Environment
-  /api/v1/project/{project_id}/environment/{environment_id}:
+      - Project Detail / Parameters / Environments
+  /api/v1/project/{project_id}/environments/{environment_id}:
     delete:
       consumes:
       - application/json
@@ -575,7 +631,7 @@ paths:
             type: string
       summary: Delete environment
       tags:
-      - Project Detail / Environment
+      - Project Detail / Parameters / Environments
     put:
       consumes:
       - application/json
@@ -614,7 +670,7 @@ paths:
             type: string
       summary: Update environment
       tags:
-      - Project Detail / Environment
+      - Project Detail / Parameters / Environments
   /api/v1/project/{project_id}/overview:
     get:
       consumes:
@@ -678,7 +734,72 @@ paths:
       summary: Update project information
       tags:
       - Project Detail / Overview
-  /api/v1/project/{project_id}/stage:
+  /api/v1/project/{project_id}/parameters:
+    get:
+      consumes:
+      - application/json
+      description: Get project parameters
+      parameters:
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Parameter'
+            type: array
+        "400":
+          description: '{"error": "Bad request"}'
+          schema:
+            type: string
+        "500":
+          description: '{"error": "Failed to get project parameters"}'
+          schema:
+            type: string
+      summary: Get project parameters
+      tags:
+      - Project Detail / Parameters
+    post:
+      consumes:
+      - application/json
+      description: Create new parameter
+      parameters:
+      - description: Parameter
+        in: body
+        name: Parameter
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.CreateParameter.createParameterRequestBody'
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"message": "Parameter created"}'
+          schema:
+            type: string
+        "400":
+          description: '{"error": "Bad request"}'
+          schema:
+            type: string
+        "500":
+          description: '{"error": "Failed to create parameter"}'
+          schema:
+            type: string
+      summary: Create new parameter
+      tags:
+      - Project Detail / Parameters
+  /api/v1/project/{project_id}/stages:
     get:
       consumes:
       - application/json
@@ -706,7 +827,7 @@ paths:
             type: string
       summary: Get all stages
       tags:
-      - Project Detail / Stage
+      - Project Detail / Parameters / Stages
     post:
       consumes:
       - application/json
@@ -735,8 +856,8 @@ paths:
             type: string
       summary: Create new stage
       tags:
-      - Project Detail / Stage
-  /api/v1/project/{project_id}/stage/{stage_id}:
+      - Project Detail / Parameters / Stages
+  /api/v1/project/{project_id}/stages/{stage_id}:
     delete:
       consumes:
       - application/json
@@ -769,7 +890,7 @@ paths:
             type: string
       summary: Delete stage
       tags:
-      - Project Detail / Stage
+      - Project Detail / Parameters / Stages
     put:
       consumes:
       - application/json
@@ -808,8 +929,73 @@ paths:
             type: string
       summary: Update stage
       tags:
-      - Project Detail / Stage
-  /api/v1/setting/role:
+      - Project Detail / Parameters / Stages
+  /api/v1/project/{project_id}/versions:
+    get:
+      consumes:
+      - application/json
+      description: Get versions of project
+      parameters:
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Version'
+            type: array
+        "400":
+          description: '{"error": "Bad request"}'
+          schema:
+            type: string
+        "500":
+          description: '{"error": "Failed to get versions"}'
+          schema:
+            type: string
+      summary: Get versions of project
+      tags:
+      - Project Detail / Versions
+    post:
+      consumes:
+      - application/json
+      description: Create new version
+      parameters:
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: integer
+      - description: Version
+        in: body
+        name: Version
+        required: true
+        schema:
+          $ref: '#/definitions/models.Version'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"message": "Version created"}'
+          schema:
+            type: string
+        "400":
+          description: '{"error": "Bad request"}'
+          schema:
+            type: string
+        "500":
+          description: '{"error": "Failed to create version"}'
+          schema:
+            type: string
+      summary: Create new version
+      tags:
+      - Project Detail / Versions
+  /api/v1/setting/roles:
     get:
       consumes:
       - application/json
@@ -832,7 +1018,7 @@ paths:
       summary: List roles
       tags:
       - Setting / Role
-  /api/v1/setting/user:
+  /api/v1/setting/users:
     get:
       consumes:
       - application/json
@@ -884,7 +1070,7 @@ paths:
       summary: Create user
       tags:
       - Setting / User
-  /api/v1/setting/user/{user_id}:
+  /api/v1/setting/users/{user_id}:
     delete:
       consumes:
       - application/json
