# routes/user_setting_router.go
@@ -10,14 +10,14 @@ import (
 func setupGroupSetting(r *gin.RouterGroup) {
 	userSettingGroup := r.Group("/setting", middleware.RequiredAuth)
 	{
-		userGroup := userSettingGroup.Group("/user")
+		userGroup := userSettingGroup.Group("/users")
 		{
 			userGroup.GET("/", controllers.ListUser)
 			userGroup.POST("/", controllers.CreateUser)
 			userGroup.PUT("/:user_id", controllers.UpdateUserInformation)
 			userGroup.DELETE("/:user_id", controllers.DeleteUser)
 		}
-		roleGroup := userSettingGroup.Group("/role")
+		roleGroup := userSettingGroup.Group("/roles")
 		{
 			roleGroup.GET("/", controllers.ListRole)
 		}
